# entropy-chatbot-v0

./: .gitignore  .replit  CLAUDE.md  README.md  index.html  package-lock.json  package.json  promptfooconfig.yml  pyproject.toml  replit.md  review_annotations.json  review_evals.py  transform.js  transform.py  vite.config.ts
archive/exp-01-oct/: analyze_ratings.py  assistant_ratings.csv  evals-run.jsonl  rating_notebook_colab.py  rating_terminal.py
attached_assets/: Pasted-Deployment-Source-Log-2025-11-10-12-00-32-05-d5952f83-System-starting-up-user-application-2025-11-10-1762799487046_1762799487047.txt
backend/: .env.example  .gitignore  README.md  example-prompts.csv  package-lock.json  package.json  tsconfig.tsbuildinfo
backend/datasets/: 2-prompt-test.json  long-eval.json
backend/prompts/: experimental-december-prompt.json  system.txt  test-prompt-1.json  test-prompt-2.json  test-prompt-3.json  web-search-prompt.json
backend/ratings/: 65776ef1765241cc0ddfdca94b60becb1c16f394bd681c8e86f66eb3194b414c_Alejo.json  74fa664e71ef423ad564b2458c7d8e4f44b4924b30685f691ab26a47357142e1_Alejo.json  eca03d51337d9fa05b63eb6854303ac67618dcf01c6686d84719bac333e7c090_Alejo.json  ultra-run_Alejo.json  (+1 more)
public/: review_annotations.json
review-app/: README.md  index.html  package.json  server.js  tsconfig.json  vite.config.js
review-app-mantine/: README.md  index.html  package.json  vite.config.ts
review-app-shadcn/: CHANGES.md  COMPARISON.md  README.md  package.json  update-results.sh
src/: App.tsx  ReviewApp.tsx  constants.ts  index.css  utils.ts
(+60 files in other folders)
