[project]
name = "evals"
version = "0.1.0"
description = "Evaluation workflow for entropy-chatbot using promptfoo, Streamlit, and uv"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "matplotlib>=3.8.0",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "rich>=14.1.0",
    "seaborn>=0.13.0",
    "streamlit>=1.28.0",
]

[tool.uv]
dev-dependencies = []
